# file-manager

./: Cargo.toml  README.md
src/: app.rs  constants.rs  fs_utils.rs  main.rs
src/ui/: details_panel.rs  file_grid.rs  mod.rs  sidebar.rs  styles.rs  top_bar.rs  view.rs
