[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = [
  "tokio",
  "debug",
  "image",
  "svg",
  # "font",
] }
iced_aw = "0.9.3"
xdg = "2.5"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
once_cell = "1.19"
mime_guess = "2.0"
fs_extra = "1.3.0"

# Add gstreamer dependency
gstreamer = { version = "0.22", features = ["v1_18"] }
