[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug", "image", "svg"] }
iced_aw = "0.9.3"
xdg = "2.5"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
once_cell = "1.19"
dashmap = "5.5"
mime_guess = "2.0"
fs_extra = "1.3.0"
walkdir = "2"                                                              # Added for finding .desktop files
freedesktop-desktop-entry = "0.7.10"                                       # Added for parsing .desktop files
freedesktop-icons = "0.1"                                                  # Added for icon theme lookup
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
image = "0.25.6"
directories = "6.0.0"
anyhow = "1.0.98"
